--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ p{
 }
 #img{
 	width:896px;height:504px;
-	background-image:url(img/1.png),url(img/2.jpg),url(img/3.jpg);
+	background-image:url(img/1.jpg),url(img/2.jpg),url(img/3.jpg);
 	background-size:cover;
 	background-repeat:no-repeat;
 	transition:background-position 0.8s;
