--- a/introduction/index.html
+++ b/introduction/index.html
@@ -3,42 +3,7 @@
 <head>
 <meta charset='utf-8'>
 <title>Introduction - Cierramegumi</title>
-<style type='text/css'>
-body{
-	background:hsl(200,100%,84%);
-}
-#warp{
-	width:896px;background:#FFF4;
-	margin:0 auto;padding:20px 40px 40px 40px;
-}
-h1{
-	border-bottom:4px solid #666;
-	padding-bottom:16px;
-	font-size:60px;text-align:center;
-}
-p{
-	font-size:36px;
-}
-#nav{
-	position:fixed;top:80px;left:80px;
-	width:60px;height:60px;background:#FFF0;
-}
-#nav:hover{
-	height:300px;
-}
-#nav>a{
-	display:block;background:#FFF3;
-	/*border:2px solid #333;*/width:60px;height:60px;
-	text-align:center;line-height:60px;
-	text-decoration:none;color:#3330;
-	margin-bottom:-60px;border-radius:100%;
-	box-shadow:1px 1px 4px #0004;
-	transition:margin-bottom 0.8s,color 0.8s;
-}
-#nav:hover>a{
-	margin-bottom:20px;color:#333;
-}
-</style>
+<link type='text/css' rel='stylesheet' href='../css/main.css'/>
 </head>
 <body>
 	<div id='warp'>
