--- a/introduction/index.html
+++ b/introduction/index.html
@@ -4,6 +4,9 @@
 <meta charset='utf-8'>
 <title>Introduction - Cierramegumi</title>
 <link type='text/css' rel='stylesheet' href='../css/main.css'/>
+<style type='text/css'>
+#nav>a{color:#3330;margin-bottom:-60px;}
+</style>
 </head>
 <body>
 	<div id='warp'>
