--- a/pitures/index.html
+++ b/pitures/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset='utf-8'>
 <title>Cierramegumi</title>
-<link href='css/main.css' rel='stylesheet' type='text/css'/>
+<link type='text/css' rel='stylesheet' href='css/main.css'/>
 <style type='text/css'>
 #warp{text-align:center;}
 #img{
@@ -26,7 +26,6 @@
 	95%{background-position:-1792px 0,-896px 0,0 0;}
 	100%{background-position:0 0,896px 0,1792px 0;}
 }
-#nav>a{color:#3330;margin-bottom:-60px;}
 </style>
 </head>
 <body>
