--- a/pitures/index.html
+++ b/pitures/index.html
@@ -2,30 +2,10 @@
 <html>
 <head>
 <meta charset='utf-8'>
-<title>Cierramegumi</title>
+<title>Pictures - Cierramegumi</title>
 <link type='text/css' rel='stylesheet' href='css/main.css'/>
 <style type='text/css'>
-#warp{text-align:center;}
-#img{
-	width:896px;height:504px;
-	background-image:url(img/1.jpg),url(img/2.jpg),url(img/3.jpg);
-	background-size:cover;
-	background-repeat:no-repeat;
-	transition:background-position 0.8s;
-	animation:roll 15s infinite;
-}
-#img:hover{
-	background-position:-896px 0,0 0;
-}
-@keyframes roll{
-	0%{background-position:0 0,896px 0,1792px 0;}
-	28%{background-position:0 0,896px 0,1792px 0;}
-	33%{background-position:-896px 0,0 0,896px 0;}
-	61%{background-position:-896px 0,0 0,896px 0;}
-	66%{background-position:-1792px 0,-896px 0,0 0;}
-	95%{background-position:-1792px 0,-896px 0,0 0;}
-	100%{background-position:0 0,896px 0,1792px 0;}
-}
+#nav>a{color:#3330;margin-bottom:-60px;}
 </style>
 </head>
 <body>
@@ -35,9 +15,9 @@
 		<div id='img'></div>
 	</div>
 	<div id='nav'>
-		<a href=''>H</a>
-		<a href='introduction/'>I</a>
-		<a href=''>M</a>
+		<a href='/'>H</a>
+		<a href='/introduction/'>I</a>
+		<a href='/pictures/'>P</a>
 		<a href=''>E</a>
 	</div>
 </body>
