--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
 		<div id='img'></div>
 	</div>
 	<div id='nav'>
-		<a href=''>H</a>
-		<a href='introduction/'>I</a>
-		<a href=''>M</a>
+		<a href='/'>H</a>
+		<a href='/introduction/'>I</a>
+		<a href='/pictures/'>P</a>
 		<a href=''>E</a>
 	</div>
 </body>
