--- a/introduction/index.html
+++ b/introduction/index.html
@@ -14,9 +14,9 @@
 		<p></p>
 	</div>
 	<div id='nav'>
-		<a href='../'>H</a>
-		<a href=''>I</a>
-		<a href=''>M</a>
+		<a href='/'>H</a>
+		<a href='/introduction/'>I</a>
+		<a href='/pictures/'>P</a>
 		<a href=''>E</a>
 	</div>
 </body>
