--- a/pictures/index.html
+++ b/pictures/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset='utf-8'>
 <title>Pictures - Cierramegumi</title>
-<link type='text/css' rel='stylesheet' href='css/main.css'/>
+<link href='/css/main.css' rel='stylesheet' type='text/css'/>
 <style type='text/css'>
 #nav>a{color:#3330;margin-bottom:-60px;}
 </style>
