--- a/introduction/index.html
+++ b/introduction/index.html
@@ -6,12 +6,19 @@
 <link href='/css/main.css' rel='stylesheet' type='text/css'/>
 <style type='text/css'>
 #nav>a{color:#3330;margin-bottom:-60px;}
+#warp>p{border-bottom:2px dashed #AAA;margin-bottom:0;color:#666;}
+h2::before{content:'▶';}
+h2::after{
+	content:'';display:block;width:350px;height:2px;
+	background:linear-gradient(90deg,#222 0,#0000 100%);
+}
+.box>p{font-size:20px;}
 </style>
 </head>
 <body>
 	<div id='warp'>
 		<h1>Cierramegumi's Website</h1>
-		<p></p>
+		<p>Self-introduction</p>
 	</div>
 	<div id='nav'>
 		<a href='/'>H</a>
@@ -19,5 +26,27 @@
 		<a href='/pictures/'>P</a>
 		<a href=''>E</a>
 	</div>
+	<div class='box'>
+		<h2>Basic</h2>
+		<p>(There is nothing in detail.xD)</p>
+		<h2>Hobbies</h2>
+		<p>私は本当にお宅です。(not exactly)</p>
+	</div>
 </body>
 </html>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
