--- a/introduction/index.html
+++ b/introduction/index.html
@@ -13,6 +13,10 @@ h2::after{
 	background:linear-gradient(90deg,#222 0,#0000 100%);
 }
 .box>p{font-size:20px;}
+a{text-decoration:none;}
+.box a{
+	color:#3399FF;
+}
 </style>
 </head>
 <body>
@@ -31,6 +35,10 @@ h2::after{
 		<p>(There is nothing in detail.xD)</p>
 		<h2>Hobbies</h2>
 		<p>私は本当にお宅です。(not exactly)</p>
+	</div>
+	<div class='box'>
+		<h2>About me</h2>
+		<p>B站空间：<a href='https://space.bilibili.com/6431853' target='_blank'>CGpoi</a></p>
 	</div>
 </body>
 </html>
