--- a/introduction/index.html
+++ b/introduction/index.html
@@ -28,7 +28,7 @@ a{text-decoration:none;}
 		<a href='/'>H</a>
 		<a href='/introduction/'>I</a>
 		<a href='/pictures/'>P</a>
-		<a href=''>E</a>
+		<a href='/music'>M</a>
 	</div>
 	<div class='box'>
 		<h2>Basic</h2>
