--- a/music/index.html
+++ b/music/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset='utf-8'>
 <title>Cierramegumi</title>
-<link href='css/main.css' rel='stylesheet' type='text/css'/>
+<link href='/css/main.css' rel='stylesheet' type='text/css'/>
 <style type='text/css'>
 #img{
 	width:896px;height:504px;
@@ -26,19 +26,22 @@
 	100%{background-position:0 0,896px 0,1792px 0;}
 }
 #nav>a{color:#3330;margin-bottom:-60px;}
+#warp>p{color:#666;padding-bottom:4px;border-bottom:2px dashed #AAA;}
 </style>
 </head>
 <body>
 	<div id='warp'>
 		<h1>Cierramegumi's Website</h1>
-		<p>This is a normal website.</p>
-		<div id='img'></div>
+		<p>Select songs</p>
 	</div>
 	<div id='nav'>
 		<a href='/'>H</a>
 		<a href='/introduction/'>I</a>
 		<a href='/pictures/'>P</a>
-		<a href='/music/'>M</a>
+		<a href=''>M</a>
 	</div>
+	
 </body>
 </html>
+
+
