--- a/pictures/index.html
+++ b/pictures/index.html
@@ -26,7 +26,8 @@
 #category:hover>a{
 	margin-bottom:20px;color:#333;
 }
-#warp>p{display:block;border-bottom:2px dashed #666;}
+#warp>p{display:block;border-bottom:2px dashed #AAA;}
+#warp p{color:#666;}
 .span{
 	background:#FFF6;border-radius:15px;padding:10px 15px;
 	position:absolute;top:-50px;left:0;
@@ -50,12 +51,12 @@
 		<a href='/'>H</a>
 		<a href='/introduction/'>I</a>
 		<a href='/pictures/'>P</a>
-		<a href=''>E</a>
+		<a href='/music'>M</a>
 	</div>
 	<div id='category'>
 		<a>S</a>
 		<a>F</a>
-		<a>3</a>
+		<a>好き</a>
 		<a>4</a>
 	</div>
 	<div class='box'><div class='span'>Scenes</div><div class='img'></div></div>
@@ -67,7 +68,7 @@
 pList=[];
 pList[0]=[6,5,10,31,19,20,33,32,25];
 pList[1]=[7,8,9,11,12,13,14,15,16,17,18,21,22,23,24,26,27,28,29,30,36,37];
-pList[2]=[38,42,43,44,45,46,47,48,49,51];
+pList[2]=[38,42,43,44,45,46,47,48,51];
 img=$$('img');
 for(let i=img.length;i--;){
 	img[i].group=i;
