--- a/music/index.html
+++ b/music/index.html
@@ -27,6 +27,11 @@
 }
 #nav>a{color:#3330;margin-bottom:-60px;}
 #warp>p{color:#666;padding-bottom:4px;border-bottom:2px dashed #AAA;}
+.circle{
+	margin:10px auto;background:#AAA;width:896px;height:896px;
+	border-radius:50%;
+}
+#warp{border-radius:300px;}
 </style>
 </head>
 <body>
@@ -40,7 +45,9 @@
 		<a href='/pictures/'>P</a>
 		<a href=''>M</a>
 	</div>
+	<div class='circle'>
 	
+	</div>
 </body>
 </html>
 
