--- a/pictures/index.html
+++ b/pictures/index.html
@@ -54,10 +54,10 @@
 		<a href='/music'>M</a>
 	</div>
 	<div id='category'>
-		<a>S</a>
-		<a>F</a>
-		<a>好き</a>
-		<a>4</a>
+		<a title='ヾ(≧▽≦*)o'>S</a>
+		<a title='ヾ(≧▽≦*)o'>F</a>
+		<a title='ヾ(≧▽≦*)o'>好き</a>
+		<a title='ヾ(≧▽≦*)o'>4</a>
 	</div>
 	<div class='box'><div class='span'>Scenes</div><div class='img'></div></div>
 	<div class='box'><div class='span'>Figures</div><div class='img'></div></div>
@@ -91,6 +91,8 @@ for(let i=cg.length;i--;){
 		})
 	}
 }
+var til=document.getElementById('category');
+var a=category.getElementsByTagName('a');
 </script>
 </html>
 
