--- a/pictures/index.html
+++ b/pictures/index.html
@@ -10,6 +10,7 @@
 	position:fixed;top:80px;right:80px;
 	width:60px;height:60px;background:#FFF0;
 	transform:scale(1.5);transform-origin:0 0;
+	z-index:10;
 }
 #category:hover{
 	height:300px;
@@ -95,21 +96,3 @@ var til=document.getElementById('category');
 var a=category.getElementsByTagName('a');
 </script>
 </html>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
