--- a/music/index.html
+++ b/music/index.html
@@ -5,6 +5,7 @@
 <title>Cierramegumi</title>
 <link href='/css/main.css' rel='stylesheet' type='text/css'/>
 <style type='text/css'>
+body{min-width:1440px;}
 #nav>a{color:#3330;margin-bottom:-60px;}
 #warp>p{color:#666;width:640px;padding-bottom:4px;border-bottom:2px dashed #AAA;margin:0 auto;}
 .circleBox{
