--- a/music/index.html
+++ b/music/index.html
@@ -62,6 +62,15 @@ body{min-width:1440px;}
 MUSIC=[
 {n:'幾年月',id:'480097786'},
 {n:'Shelter',id:'425280053'},
+{n:'彼女は旅に出る',id:'509106775'},
+{n:'Letter Song',id:'27571001'},
+{n:'会いたい',id:'628657'},
+{n:'ハレハレヤ',id:'1365914380'},
+{n:'楽園図',id:'31680146'},
+{n:'共病文庫',id:'494865362'},
+{n:'Flower Children',id:'411500873'},
+{n:'雨き声残響',id;'41666353'},
+{n:'いつも何度でも',id;'584155'},
 ];
 MUSIC.forEach((o,i)=>{
 	var cb=document.createElement('div');
