--- a/music/index.html
+++ b/music/index.html
@@ -70,7 +70,7 @@ MUSIC=[
 {n:'共病文庫',id:'494865362'},
 {n:'Flower Children',id:'411500873'},
 {n:'雨き声残響',id:'41666353'},
-{n:'いつも何度でも',id;'584155'},
+{n:'いつも何度でも',id:'584155'},
 ];
 MUSIC.forEach((o,i)=>{
 	var cb=document.createElement('div');
